# sec-composition

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/composition/: attacker_component.hpp  listener_component.hpp  talker_component.hpp  wasm_component.hpp  wasm_mod.hpp
include/dds/: dds_listener.hpp
mycomposition_keystore/enclaves/: governance.p7s  governance.xml
mycomposition_keystore/enclaves/default/: cert.pem  key.pem  permissions.p7s  permissions.xml
mycomposition_keystore/enclaves/listener/: cert.pem  key.pem  permissions-autogen.xml  permissions.p7s  permissions.xml
mycomposition_keystore/enclaves/remote_listener/: cert.pem  key.pem  permissions-autogen.xml  permissions.p7s  permissions.xml
mycomposition_keystore/private/: ca.key.pem
mycomposition_keystore/public/: ca.cert.pem
src/: attacker_component.cpp  dds_listener.cpp  listener_component.cpp  manual_compose.cpp  remote_listener.cpp  remote_unauthorized_listener.cpp  talker_component.cpp  wasm_component.cpp  wasm_mod_attacker.cpp
wasm_build/: wasm_mod_attacker.wasm  wasm_mod_attacker.wat
